--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
   <head>
     <style>
@@ -7,7 +8,9 @@
         height: 200px;
         position: relative;
       }
-      
+      html {
+        background-color: #201c1c;
+      }
       .welcome {
         display: flex;
         justify-content: center;
