--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div id="container">
       <a href="https://discord.com/invite/NArhNWPrds">
-        <img src="staffan.jpg" id="staffan">
+        <img src="https://i.imgur.com/UsIUvfB.jpeg" id="staffan">
       </a>
     </div>    
     <script>
