--- a/index.html
+++ b/index.html
@@ -2,27 +2,7 @@
 <meta charset="UTF-8">
 <html>
   <head>
-    <style>
-      #container {
-        width: 100%;
-        height: 200px;
-        position: relative;
-      }
-      html {
-        background-color: #201c1c;
-      }
-      .welcome {
-        display: flex;
-        justify-content: center;
-      }
-      
-      #staffan {
-        width: 10%;
-        height: auto;
-        position: absolute;
-        transition: transform 0.5s ease-in-out;
-      }
-    </style>
+  <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="welcome">
